Change for NWO.

--- a/ejabberd.cfg
+++ b/ejabberd.cfg
@@ -3,9 +3,23 @@
 {include, "vhost.cfg"}.
 {include, "localhost.cfg"}.
 
-{configuration, default,
- [{this_will_be_default, "woot"},
-  {default_options, "have no namespace"},
-  {odbc_server, {mysql, "localhost", "database", "username", "password"}}]}.
+% Top level configs
+%
+% XXX - one should be able to override these per-vhost.
+{acl, foo, {}}.
+{access, bar, {}}.
+{shaper, wauug, {}}.
+{auth_method, odbc}.
+{odbc_server, {mysql}}.
+{language, "en"}.
+{modules, [{}, {}]}.
 
-{hosts, [{"sturm", vhost}, {"drang", default}, {"localhost", localhost}]}.
+% drang will use default config.
+% foobar will override the domain_certfile. 
+{hosts, [
+         {"sturm", vhost},
+         "drang",
+         {"localhost", localhost},
+         {"foobar", vhost, [{domain_certfile, "ssl.pem"}]}
+        ]}.
+
